--- a/demo/dpo/dpo_case_2.yaml
+++ b/demo/dpo/dpo_case_2.yaml
@@ -3,17 +3,13 @@ dispatcher:
   concurrency_num: 2
 datasets:
   - name: "dpo_data"
-    data: "tests/dpo/dpo_data.json"
-    prompt: "demo/dummy_template.json"
+    data: "demo/data.json"
+    prompt: "demo/preference_template.json"
     preprocess: "default"
-  - name: "dummy_data"
-    data: "demo/dummy_data.json"
-    prompt: "demo/dummy_template.json"
-    preprocess: "shuffle"
 adapters:
-  - type: "lora"
-    name: "lora_dpo_sft"
-    path: "adapters/lora_dpo_sft"
+  - name: "lora_dpo"
+    type: "lora"
+    path: "adapters/lora_sft_dpo"
     optimizer: "adamw"
     lr: 3e-4
     r: 32
@@ -24,14 +20,12 @@ adapters:
       k_proj: true
       v_proj: true
       o_proj: true
-      gate_proj: true
-      down_proj: true
-      up_proj: true
-  - type: "lora"
-    name: "lora_dpo"
-    path: "adapters/lora_base_dpo"
-    optimizer: "adamw"
-    lr: 3e-4
+      gate_proj: false
+      down_proj: false
+      up_proj: false
+  - name: "lora_0"
+    type: "lora"
+    path: "adapters/lora_sft_0"
     r: 32
     alpha: 64
     dropout: 0.05
@@ -46,7 +40,7 @@ adapters:
 tasks:
   - type: "dpo"
     adapter: "lora_dpo"
-    reference: "base"
+    reference: "lora_0"
     dataset: "dpo_data"
     batch_size: 16
     mini_batch_size: 16
@@ -56,11 +50,3 @@ tasks:
     loss_type: "sigmoid"
     beta: 0.1
     label_smoothing: 0.0
-  - type: "train"
-    adapter: "lora_dpo_sft"
-    dataset: "dummy_data"
-    batch_size: 64
-    mini_batch_size: 64
-    num_epochs: 10
-    cutoff_len: 256
-    save_step: 2000
