--- a/demo/dpo/dpo_case_3.yaml
+++ b/demo/dpo/dpo_case_3.yaml
@@ -3,13 +3,16 @@ dispatcher:
   concurrency_num: 2
 datasets:
   - name: "dpo_data"
-    data: "tests/dpo/dpo_data.json"
-    prompt: "demo/dummy_template.json"
+    data: "demo/data.json"
+    prompt: "demo/preference_template.json"
     preprocess: "default"
 adapters:
-  - type: "lora"
-    name: "lora_dpo_sft"
-    path: "adapters/lora_dpo_sft"
+  - name: "lora_dpo"
+    type: "loraplus"
+    path: "adapters/loraplus_sft_dpo"
+    optimizer: "adamw"
+    lr_ratio: 8
+    lr: 3e-4
     r: 32
     alpha: 64
     dropout: 0.05
@@ -18,14 +21,12 @@ adapters:
       k_proj: true
       v_proj: true
       o_proj: true
-      gate_proj: true
-      down_proj: true
-      up_proj: true
-  - type: "lora"
-    name: "lora_dpo"
-    path: "adapters/lora_dpo"
-    optimizer: "adamw"
-    lr: 3e-4
+      gate_proj: false
+      down_proj: false
+      up_proj: false
+  - name: "lora_0"
+    type: "lora"
+    path: "adapters/loraplus_sft_0"
     r: 32
     alpha: 64
     dropout: 0.05
@@ -40,7 +41,7 @@ adapters:
 tasks:
   - type: "dpo"
     adapter: "lora_dpo"
-    reference: "lora_dpo_sft"
+    reference: "lora_0"
     dataset: "dpo_data"
     batch_size: 16
     mini_batch_size: 16
