--- a/demo/lora/lora_case_1.yaml
+++ b/demo/lora/lora_case_1.yaml
@@ -2,13 +2,13 @@ dispatcher:
   name: "default"
   concurrency_num: 2
 datasets:
-  - name: "dummy_data"
-    data: "demo/dummy_data.json"
-    prompt: "demo/dummy_template.json"
-    preprocess: "default"
+  - name: "data"
+    data: "demo/data.json"
+    prompt: "demo/template.json"
+    preprocess: "shuffle"
 adapters:
-  - type: "lora"
-    name: "lora_0"
+  - name: "lora_0"
+    type: "lora"
     path: "adapters/lora_sft_0"
     optimizer: "adamw"
     lr: 3e-4
@@ -23,16 +23,13 @@ adapters:
       gate_proj: false
       down_proj: false
       up_proj: false
-  - type: "lora"
-    name: "lora_1"
+  - name: "lora_1"
+    type: "lora"
     path: "adapters/lora_sft_1"
     optimizer: "adamw"
-    lr: 3e-4
-    lrscheduler: "cosine"
-    t_max: 10000
-    eta_min: 0
-    r: 8
-    alpha: 16
+    lr: 3e-5
+    r: 32
+    alpha: 64
     dropout: 0.05
     target_modules:
       q_proj: true
@@ -45,7 +42,7 @@ adapters:
 tasks:
   - type: "train"
     adapter: "lora_0"
-    dataset: "dummy_data"
+    dataset: "data"
     batch_size: 64
     mini_batch_size: 64
     num_epochs: 10
@@ -53,7 +50,7 @@ tasks:
     save_step: 2000
   - type: "train"
     adapter: "lora_1"
-    dataset: "dummy_data"
+    dataset: "data"
     batch_size: 64
     mini_batch_size: 64
     num_epochs: 10
