--- a/demo/dpo/dpo_case_2.yaml
+++ b/demo/dpo/dpo_case_2.yaml
@@ -39,6 +39,7 @@ adapters:
       up_proj: false
 tasks:
   - type: "dpo"
+    name: "task_0"
     adapter: "lora_dpo"
     reference: "lora_0"
     dataset: "dpo_data"
