--- a/demo/loraplus/loraplus_case_1.yaml
+++ b/demo/loraplus/loraplus_case_1.yaml
@@ -43,6 +43,7 @@ adapters:
       up_proj: true
 tasks:
   - type: "train"
+    name: "task_0"
     adapter: "lora_0"
     dataset: "data"
     batch_size: 64
@@ -51,6 +52,7 @@ tasks:
     cutoff_len: 256
     save_step: 2000
   - type: "train"
+    name: "task_1"
     adapter: "lora_1"
     dataset: "data"
     batch_size: 64
