--- a/demo/cpo/cpo_case_1.yaml
+++ b/demo/cpo/cpo_case_1.yaml
@@ -4,7 +4,8 @@ dispatcher:
 datasets:
   - name: "cpo_data"
     data: "demo/data.json"
-    prompt: "demo/preference_template.json"
+    prompt: "demo/preference_prompt.yaml"
+    prompt_type: "preference"
     preprocess: "default"
 adapters:
   - name: "lora_cpo"
