--- a/.github/workflows/pr-clean-code-test.yml
+++ b/.github/workflows/pr-clean-code-test.yml
@@ -32,7 +32,16 @@ jobs:
           lizard -l python ./mlora -C 12
       - name: Lint with flake8
         run: |
-          flake8 . --count --show-source --statistics --max-line-length=127 --max-complexity 15 --ignore=E722,W504
+          flake8 ./mlora --count --show-source --statistics --max-line-length=88 --max-complexity 15 --ignore=E203,W503,E704
+      - name: Lint with black
+        run: |
+          black --check ./mlora
+      - name: Lint with isort
+        run: |
+          isort ./mlora --check --profile black
+      - name: Static code check with mypy
+        run: |
+          mypy ./mlora --ignore-missing-imports --non-interactive --install-types --check-untyped-defs
       - name: Test with pytest
         run: |
           pytest
