--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-ci_test = ["pytest", "flake8", "lizard"]
+ci_test = ["pytest", "flake8", "lizard", "black", "isort", "mypy"]
 test = ["peft", "setuptools"]
 debug = ["graphviz"]
 deploy = ["rich", "fastapi", "plyvel", "uvicorn", "InquirerPy"]
