--- a/.github/workflows/pr-clean-code-test.yml
+++ b/.github/workflows/pr-clean-code-test.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install lizard flake8 black isort mypy
+          pip install .[ci_test]
       - name: CCN with Lizard
         run: |
           lizard -l python ./mlora -C 12
