--- a/pyproject.mlora.toml
+++ b/pyproject.mlora.toml
@@ -19,6 +19,7 @@ dependencies = [
     "sentencepiece==0.1.99",
     "protobuf==3.20.2",
     "scipy==1.11.4",
+    "tensorboard==2.17.0",
 ]
 
 [project.optional-dependencies]
