--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ sentencepiece
 huggingface_hub
 scikit-learn
 tiktoken
-gradio==4.11.0
+gradio==4.29.0
 peft==0.11.1
 pandas
 fire
 black
 isort
+notebook
+ipywidgets
