--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch>=2.3.0
+torch==2.3.1
 datasets
 evaluate
 accelerate
-transformers==4.42.3
+transformers==4.42.4
 sentencepiece
 huggingface_hub
 scikit-learn
