--- a/pyproject.mlora.toml
+++ b/pyproject.mlora.toml
@@ -20,6 +20,7 @@ dependencies = [
     "protobuf==3.20.2",
     "scipy==1.11.4",
     "tensorboard==2.17.0",
+    "python-multipart==0.0.17",
 ]
 
 [project.optional-dependencies]
